<resources>
    <string name="app_name">Word Counter App2025</string>
    <string name="enter_text_label">Enter text</string>
    <string name="select_metric_prompt">Select metric to count</string>
    <string name="count_button">Count</string>
    <string name="empty_text_warning">Warning: Please enter some text</string>
    <string-array name="metrics_array">
        <item>Sentences</item>
        <item>Words</item>
        <item>Chars</item>
        <item>Numbers</item>
    </string-array>
</resources>